Revision history for Perl extension Chess::Mbox.

0.01  Mon Feb 11 02:36:04 2002
	- original version; created by h2xs 1.1.1.4 with options
		-A -X -n Chess::Mbox
