@@ -3,4 +3,6 @@ Makefile.PL
 MANIFEST
 Mbox.pm
 chess-games.mbox
+scripts/annotate.pl
+scripts/parsegames.pl
 test.pl
