@@ -1,3 +1,12 @@
+2002-02-21  Terrence Brannon  <metaperl@localhost>
+
+	* added post_op option to constructor so that an Chess game
+	written to disk can have post-processing (e.g. run a Crafty
+	analysis on it) done on it.
+
+	* added scripts/parsegames.pl which is the script I use to process
+	my games files. also added scripts/annotate.pl, which is uses
+
 Revision history for Perl extension Chess::Mbox.
 
 0.01  Mon Feb 11 02:36:04 2002
